fixes z-index

--- a/app/less/utils/sidemenu.less
+++ b/app/less/utils/sidemenu.less
@@ -14,7 +14,7 @@
 // This is the parent `<div>` that contains the menu and the content area.
 
 #layout {
-    z-index: 99;
+    z-index: 9999;
     padding-left: 200px;
     /* left col width "#menu" */
     left: 0;
@@ -30,7 +30,7 @@
     max-width: 800px;
     margin-bottom: 50px;
     line-height: 1.6em;
-             color:@white;
+    color:@white;
 }
 
 .content-subhead {
@@ -76,12 +76,12 @@
     left: 150px;
     // this should be "#menu" width
     bottom: 0;
-    z-index: 1;
+    z-index: 9999;
     // so the menu or its navicon stays above all content
     // background: @contentlink;
     // background: @rowdyblue;
     background: @level-0;
-    overflow-y: auto;
+    // overflow-y: auto;
     -webkit-overflow-scroll: touch;
     // for smooth scrolling on mobile
     // All anchors inside the menu should be styled like this
@@ -176,7 +176,7 @@
     width: 4.5em;
     height: auto;
     padding: 2.2em 1.6em;
-      span {
+    span {
           position: relative;
           display: block;
           background: #fff;
@@ -206,14 +206,16 @@
     // ie8 no transperency fallback
     background: rgb(27,85,122);
     background: rgba(27,85,122,1);
-    .rotate(0deg);
-      .animate(0.2);
-      // three bar indicator for collapse nav
+    // .rotate(0deg);
+    // .animate(0.2);
+
+    // three bar indicator for collapse nav
+    // *
     span {
         position: relative;
         display: block;
         background: #fff;
-             color:@white;
+        color:@white;
         width: 100%;
         height: 0.2em;
          &:before, &:after {
@@ -258,12 +260,12 @@
         left: 0;
     }
     .menu-link {
-                            position: fixed;
-                            left: 0;
-                            display: block;
-                           // ie8 no transperency fallback
-                            background: rgb(27,85,122);
-                            background: rgba(27,85,122,0.5);
+        position: fixed;
+        left: 0;
+        display: block;
+       // ie8 no transperency fallback
+        background: rgb(27,85,122);
+        background: rgba(27,85,122,0.5);
                  /* show the button on small screens */
     }
     #layout.active .menu-link {
@@ -311,11 +313,13 @@
         position: relative;
         padding: 10px 15px;
         // color: @level-1;
-        color: red;
+        // color: red;
 
     }
 
     li:after{
+
+
         .animate(0.25s);
     }
 
